--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,26 @@
 version: '3'
-networks:
-  web:
-    driver: bridge
 services:
   db:
-    image: mysql:5.7
-    ports:
-      - "3307:3306"
+    image: mysql:8
+    # ports:
+    #   - "3305:3306"
     environment:
-      - MYSQL_DATABASE='enstitium'
-      - MYSQL_USER='Bikalpa'
-      - MYSQL_PASSWORD='Bikalpa123'
-      - MYSQL_ROOT_PASSWORD='root_password'
-    networks:
-      - web
-    volumes:
-      - ./db:/var/lib/mysql
+      - MYSQL_DATABASE=enstitium
+      # - MYSQL_USER=Bikalpa
+      # - MYSQL_PASSWORD=Bikalpa123
+      - MYSQL_ROOT_PASSWORD=Bikalpa123
+
+    # volumes:
+    #   - ./db:/var/lib/mysql
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
     ports:
       - "8000:8000"
-    volumes:
-      - .:/app
+    # volumes:
+    #   - .:/app
+    environment:
+      - MYSQL_DATABASE_HOST=db
+    restart: always
     depends_on:
       - db
-    networks:
-      - web
