--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,16 +2,17 @@ version: '3'
 services:
   db:
     image: mysql:8
-    # ports:
-    #   - "3305:3306"
     environment:
       - MYSQL_DATABASE=enstitium
-      # - MYSQL_USER=Bikalpa
-      # - MYSQL_PASSWORD=Bikalpa123
       - MYSQL_ROOT_PASSWORD=Bikalpa123
-
-    # volumes:
-    #   - ./db:/var/lib/mysql
+    volumes:
+      - db_data:/var/lib/mysql
+      - migrate_data:/app/db  
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      timeout: 5s
+      retries: 3
   web:
     build: .
     command: python manage.py runserver 0.0.0.0:8000
@@ -19,8 +20,44 @@ services:
       - "8000:8000"
     # volumes:
     #   - .:/app
-    environment:
-      - MYSQL_DATABASE_HOST=db
+    # environment:
+    #   - MYSQL_DATABASE_HOST=db
     restart: always
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+
+volumes:
+  db_data:
+  migrate_data:
+
+
+
+
+
+# version: '3'
+# services:
+#   db:
+#     image: mysql:8
+#     # ports:
+#     #   - "3305:3306"
+#     environment:
+#       - MYSQL_DATABASE=enstitium
+#       # - MYSQL_USER=Bikalpa
+#       # - MYSQL_PASSWORD=Bikalpa123
+#       - MYSQL_ROOT_PASSWORD=Bikalpa123
+
+#     # volumes:
+#     #   - ./db:/var/lib/mysql
+#   web:
+#     build: .
+#     command: python manage.py runserver 0.0.0.0:8000
+#     ports:
+#       - "8000:8000"
+#     # volumes:
+#     #   - .:/app
+#     environment:
+#       - MYSQL_DATABASE_HOST=db
+#     restart: always
+#     depends_on:
+#       - db
